--- a/packages/multiple-package-project/package.json
+++ b/packages/multiple-package-project/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@multiple-package-project/css-style",
+  "name": "multiple-package-project",
   "version": "1.0.0",
-  "description": "A Style For multiple-package-project",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
