--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,4 @@
 packages:  
-# 包的直接子分区中的所有包/
-# 定义了 工作空间 的根目录，并能够使您从工作空间中包含排除目录 。
-# 默认情况下，包含所有子目录。即使使用了自定义目录位置通配符，根目录下的package目录也总是被包含 /
+# 配置pnpm install执行所有的子包依赖安装，会将配置目录下所有包含package.json的包全部安装依赖，没配置的不执行
 - 'packages/*'
+- examples
