--- a/packages/css-style/package.json
+++ b/packages/css-style/package.json
@@ -4,9 +4,22 @@
   "description": "A Style For multiple-package-project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf dist",
+    "build": "gulp --require @esbuild-kit/cjs-loader"
   },
   "keywords": [],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@esbuild-kit/cjs-loader": "^2.2.1",
+    "@multiple-package-project/build": "workspace:^0.0.1",
+    "@types/gulp-autoprefixer": "^0.0.33",
+    "@types/gulp-clean-css": "^4.3.0",
+    "@types/gulp-rename": "^2.0.1",
+    "@types/gulp-sass": "^5.0.0",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0"
+  }
 }
