--- a/packages/css-style/package.json
+++ b/packages/css-style/package.json
@@ -12,7 +12,7 @@
   "license": "MIT",
   "devDependencies": {
     "@esbuild-kit/cjs-loader": "^2.2.1",
-    "@multiple-package-project/build": "workspace:^0.0.1",
+    "@multiple-package-project/build-utils": "workspace:*",
     "@types/gulp-autoprefixer": "^0.0.33",
     "@types/gulp-clean-css": "^4.3.0",
     "@types/gulp-rename": "^2.0.1",
