--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@multiple-package-project/css-style": "workspace:*",
     "@multiple-package-project/hooks": "workspace:*",
     "@multiple-package-project/utils": "workspace:*",
+    "@vueuse/core": "^10.0.2",
     "axios": "^1.3.4",
     "lodash": "^4.17.21"
   },
