--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "lodash-unified": "^1.0.3"
   }
 }
