--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@multiple-package-project/css-style": "workspace:*",
     "@multiple-package-project/hooks": "workspace:*",
     "@multiple-package-project/utils": "workspace:*",
+    "@vitejs/plugin-vue": "^4.1.0",
     "@vueuse/core": "^10.0.2",
     "axios": "^1.3.4",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "vite": "^4.2.0",
+    "vitest": "^0.30.1"
   },
   "devDependencies": {
     "@multiple-package-project/build": "workspace:*",
