--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@multiple-package-project/css-style": "workspace:*",
-    "@multiple-package-project/utils": "workspace:*"
+    "@element-plus/icons-vue": "^2.0.6",
+    "element-plus": "^2.2.14",
+    "vant": "^3.6.0"
+  },
+  "peerDependencies": {
+    "vue": "^3.2.0"
   }
 }
