--- a/packages/multiple-package-project/package.json
+++ b/packages/multiple-package-project/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@vueuse/core": "^10.0.2"
+  }
 }
