--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vueuse/core": "^10.0.2",
     "axios": "^1.3.4",
     "lodash": "^4.17.21",
+    "unplugin-vue-define-options": "^0.6.1",
     "vite": "^4.2.0",
     "vitest": "^0.30.1"
   },
