--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@multiple-package-project/hooks": "workspace:*",
     "@multiple-package-project/utils": "workspace:*",
     "@vitejs/plugin-vue": "^4.1.0",
-    "@vueuse/core": "^10.0.2",
+    "@vueuse/core": "^9.1.0",
     "axios": "^1.3.4",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
+    "type-fest": "^2.14.0",
     "unplugin-vue-define-options": "^0.6.1",
     "vite": "^4.2.0",
     "vitest": "^0.30.1"
