--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^4.17.21",
-    "lodash-unified": "^1.0.3"
+    "moment": "^2.29.4"
   }
 }
